# yolov8_graspnet_ros

./: CMakeLists.txt  README.md
launch/: detector_3d.launch  yolo_graspnet_generator.launch  yolo_graspnet_generator_with_dl.launch
msg/: DetectedObject.msg  DetectedObjectArray.msg
scripts/: detector_3d_node.py  graspnet_generator.py  graspnet_generator_with_dl.py
scripts/utils/: bridge_utils.py  dl_model_utils.py  grasp_utils.py  pointcloud_utils.py  setup_graspnet.py  visualization.py
yolo_graspnet_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
yolo_graspnet_ros/launch/: detector_3d.launch  yolo_graspnet_generator.launch  yolo_graspnet_generator_with_dl.launch
yolo_graspnet_ros/models/: README.md
yolo_graspnet_ros/rviz/: grasp_detection.rviz
yolo_graspnet_ros/scripts/: detector_3d_node.py  graspnet_generator.py  graspnet_generator_with_dl.py
yolo_graspnet_ros/scripts/utils/: bridge_utils.py  dl_model_utils.py  grasp_utils.py  pointcloud_utils.py  setup_graspnet.py  visualization.py
